--- a/common/src/main/res/layout/v_toggle_button.xml
+++ b/common/src/main/res/layout/v_toggle_button.xml
@@ -10,10 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="40dip"
         android:layout_centerInParent="true"
-        android:background="@color/white"
+        android:background="@android:color/transparent"
         android:drawableRight="@drawable/expand_tab_selector"
         android:gravity="center"
         android:singleLine="true"
+        android:button="@null"
         android:text="ToggleButton"
         android:textColor="@drawable/choose_button_selector"
         android:textOff="@null"
