--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <declare-styleable name="ExtendedTouchView">
+        <attr name="touchWidth" format="dimension" />
+        <attr name="touchHeight" format="dimension" />
+    </declare-styleable>
+
+
     <declare-styleable name="listitem">
         <attr name="tvtitle" format="string"/>
         <attr name="text" format="string"/>
