--- a/bluecollar/src/main/res/layout/fragment_blue_home.xml
+++ b/bluecollar/src/main/res/layout/fragment_blue_home.xml
@@ -31,25 +31,27 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/blue_search_but"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/padding_small"
                     android:background="@drawable/edittext_wite_bg"
+                    android:clickable="true"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingBottom="@dimen/padding_small"
                     android:paddingLeft="12dip"
-                    android:paddingRight="@dimen/font_size_15"
+                    android:paddingRight="@dimen/padding_small"
                     android:paddingTop="@dimen/padding_small"
                     >
 
-                    <EditText
+                    <TextView
                         android:id="@+id/etSearch"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@color/transparent"
-                        android:focusable="false"
+                        android:clickable="false"
                         android:hint="输入关键字/职位/公司搜索"
                         android:textSize="@dimen/text_default"/>
 
@@ -58,6 +60,7 @@
                         android:layout_width="65dip"
                         android:layout_height="35dip"
                         android:background="@drawable/button_bg"
+                        android:clickable="false"
                         android:text="搜索"
                         android:textColor="@color/white"
                         android:textSize="@dimen/text_default"/>
@@ -73,15 +76,27 @@
                 android:layout_marginTop="@dimen/padding_small"
                 android:background="@color/white"
                 android:orientation="horizontal"
-                android:paddingBottom="@dimen/padding_default"
-                android:paddingLeft="@dimen/padding_default"
-                android:paddingRight="@dimen/padding_default">
+                android:padding="@dimen/padding_default"
+                android:visibility="gone">
+
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/historyLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/padding_default"
+                android:paddingLeft="@dimen/padding_default"
+                android:paddingRight="@dimen/padding_default"
+                android:visibility="gone">
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/space_40"
+                android:layout_marginTop="@dimen/padding_small"
                 android:background="@color/bule_low_color"
                 android:gravity="center_vertical"
                 android:paddingLeft="@dimen/padding_large"
