--- a/bluecollar/src/main/res/layout/item_bluejob.xml
+++ b/bluecollar/src/main/res/layout/item_bluejob.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
@@ -7,20 +8,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dip"
-        android:layout_marginLeft="@dimen/padding_large"
+        android:layout_marginLeft="@dimen/padding_small"
         android:layout_marginRight="@dimen/space_10"
         android:orientation="horizontal"
         android:paddingTop="@dimen/padding_small">
 
-        <CheckBox
+        <cn.goodjobs.common.view.ExtendedTouchView
             android:id="@+id/item_check"
-            android:layout_width="25dip"
-            android:layout_height="25dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/checkbox_selector"
-            android:button="@null"
-            android:padding="@dimen/space_10"
-            />
+            android:background="@color/grey"
+            app:touchHeight="100dp"
+            >
+
+            <CheckBox
+                android:id="@+id/item_c"
+                android:layout_width="25dip"
+                android:layout_height="25dip"
+                android:background="@drawable/checkbox_selector"
+                android:button="@null"
+                android:clickable="false"
+                android:padding="@dimen/space_10"
+                />
+        </cn.goodjobs.common.view.ExtendedTouchView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +58,7 @@
                     android:textSize="@dimen/font_size_14"/>
 
                 <TextView
-                    android:id="@+id/item_address"
+                    android:id="@+id/item_dis"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="30dip"
@@ -69,7 +80,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/item_name"
+                    android:id="@+id/item_salary"
                     android:layout_width="0dip"
                     android:layout_height="match_parent"
                     android:layout_weight="1.5"
@@ -93,24 +104,32 @@
                 android:orientation="horizontal">
 
                 <cn.goodjobs.common.view.BabushkaText
-                    android:id="@+id/item_salary"
-                    android:layout_width="match_parent"
+                    android:id="@+id/item_address"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:singleLine="true"
                     android:textColor="@color/light_color"
                     android:textSize="@dimen/font_size_14"/>
 
-                <TextView
-                    android:id="@+id/item_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:gravity="center_vertical|right"
-                    android:textColor="@color/light_color"
-                    android:textSize="@dimen/font_size_14"/>
+                <ImageView
+                    android:id="@+id/item_certify"
+                    android:layout_width="20dip"
+                    android:layout_height="15dip"
+                    android:layout_gravity="center_vertical"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/icon_uncertify"/>
+
+                <ImageView
+                    android:id="@+id/item_vip"
+                    android:layout_width="20dip"
+                    android:layout_height="15dip"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/padding_small"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/icon_vip"/>
+
 
             </LinearLayout>
 
