--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -123,7 +123,7 @@
     <dimen name="font_size_17">17sp</dimen>
     <dimen name="font_size_16">16sp</dimen>
     <dimen name="font_size_15">15sp</dimen>
-    <dimen name="font_size_14">@dimen/text_small</dimen>
+    <dimen name="font_size_14">@dimen/text_default</dimen>
     <dimen name="font_size_13">13sp</dimen>
     <dimen name="font_size_12">12sp</dimen>
     <dimen name="font_size_11">11sp</dimen>
