--- a/common/src/main/res/layout/v_toggle_button.xml
+++ b/common/src/main/res/layout/v_toggle_button.xml
@@ -19,7 +19,7 @@
         android:textColor="@drawable/choose_button_selector"
         android:textOff="@null"
         android:textOn="@null"
-        android:textSize="@dimen/font_size_14">
+        android:textSize="@dimen/text_small">
 
     </ToggleButton>
 </RelativeLayout>
