--- a/applyjobs/src/main/res/layout/fragment_job_detail.xml
+++ b/applyjobs/src/main/res/layout/fragment_job_detail.xml
@@ -47,9 +47,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/space_10"
-            android:layout_marginRight="@dimen/space_10"
-            android:layout_marginTop="@dimen/space_5"
+            android:layout_marginLeft="@dimen/padding_small"
+            android:layout_marginRight="@dimen/padding_small"
+            android:layout_marginTop="@dimen/padding_small"
             android:orientation="vertical">
 
             <LinearLayout
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:padding="@dimen/space_15">
+                android:padding="@dimen/padding_small">
 
                 <TextView
                     android:id="@+id/job_name"
@@ -65,7 +65,6 @@
                     android:layout_height="0dip"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="Android开发"
                     android:textColor="@color/black"
                     android:textSize="@dimen/font_size_14"
                     android:textStyle="bold"/>
@@ -81,7 +80,7 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="@dimen/space_5"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/font_size_13"
+                    android:textSize="@dimen/text_small"
                     />
             </LinearLayout>
 
@@ -89,10 +88,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginTop="@dimen/padding_small"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:padding="@dimen/space_10">
+                android:padding="@dimen/padding_small">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -164,10 +163,10 @@
                 android:id="@+id/job_bright_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginTop="@dimen/padding_small"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:padding="@dimen/space_15"
+                android:padding="@dimen/padding_small"
                 android:visibility="gone">
 
                 <TextView
@@ -182,9 +181,9 @@
 
                 <cn.goodjobs.common.view.XCFlowLayout
                     android:id="@+id/job_bright"
-                    android:layout_marginTop="@dimen/space_10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_10"
                     ></cn.goodjobs.common.view.XCFlowLayout>
 
                 <View
@@ -196,10 +195,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginTop="@dimen/padding_small"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:padding="@dimen/space_15">
+                android:padding="@dimen/padding_small">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -215,9 +214,9 @@
                     android:id="@+id/job_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_10"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/font_size_14"></TextView>
+                    android:layout_marginTop="@dimen/padding_small"
+                    android:textColor="@color/light_color"
+                    android:textSize="@dimen/text_small"></TextView>
 
             </LinearLayout>
 
@@ -225,10 +224,10 @@
                 android:id="@+id/job_other_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginTop="@dimen/padding_small"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:padding="@dimen/space_15"
+                android:padding="@dimen/padding_small"
                 android:visibility="gone">
 
                 <TextView
@@ -243,8 +242,11 @@
 
                 <TextView
                     android:id="@+id/job_other"
+                    android:layout_marginTop="@dimen/padding_small"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"></TextView>
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/light_color"
+                    android:textSize="@dimen/text_small"></TextView>
 
             </LinearLayout>
 
@@ -252,12 +254,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginTop="@dimen/padding_small"
                 android:background="@drawable/list_item_bg"
                 android:orientation="vertical"
-                android:paddingLeft="5dip"
-                android:paddingRight="5dip"
-                android:paddingTop="5dip"
+                android:paddingLeft="@dimen/padding_small"
+                android:paddingRight="@dimen/padding_small"
+                android:paddingTop="@dimen/padding_small"
                 android:visibility="visible">
 
                 <TextView
@@ -265,14 +267,14 @@
                     android:layout_height="match_parent"
                     android:drawableRight="@drawable/r_icon"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/space_15"
                     android:text="相似职位"
-                    android:textColor="@color/black"
+                    android:textColor="@color/bule_low_color"
                     android:textSize="@dimen/font_size_14"
                     />
 
                 <View
                     style="@style/line"
+                    android:layout_marginTop="@dimen/padding_small"
                     ></View>
 
                 <LinearLayout
