--- a/applyjobs/src/main/res/layout/item_jobsearchresult.xml
+++ b/applyjobs/src/main/res/layout/item_jobsearchresult.xml
@@ -6,17 +6,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dip"
+        android:layout_height="80dip"
         android:layout_marginLeft="@dimen/space_10"
         android:layout_marginRight="@dimen/space_10"
         android:orientation="horizontal">
 
         <CheckBox
             android:id="@+id/item_check"
-            android:layout_width="25dip"
-            android:layout_height="25dip"
+            android:layout_width="20dip"
+            android:layout_marginRight="@dimen/padding_small"
+            android:layout_height="20dip"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/checkbox_selector"
+            android:background="@drawable/checkbox_bg"
             android:button="@null"
             android:padding="@dimen/space_10"
             />
@@ -24,10 +25,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/space_10"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
                 android:layout_weight="1"
@@ -51,7 +53,7 @@
                     android:layout_weight="2"
                     android:gravity="center_vertical|right"
                     android:textColor="@color/light_color"
-                    android:textSize="@dimen/font_size_12"/>
+                    android:textSize="@dimen/text_small"/>
 
             </LinearLayout>
 
@@ -64,7 +66,7 @@
                 android:gravity="center_vertical"
                 android:singleLine="true"
                 android:textColor="@color/light_color"
-                android:textSize="@dimen/font_size_14"/>
+                android:textSize="@dimen/text_small"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -81,7 +83,7 @@
                     android:gravity="center_vertical"
                     android:singleLine="true"
                     android:textColor="@color/light_color"
-                    android:textSize="@dimen/font_size_14"/>
+                    android:textSize="@dimen/text_small"/>
 
                 <TextView
                     android:id="@+id/item_time"
@@ -90,7 +92,7 @@
                     android:layout_weight="2"
                     android:gravity="center_vertical|right"
                     android:textColor="@color/light_color"
-                    android:textSize="@dimen/font_size_14"/>
+                    android:textSize="@dimen/text_small"/>
 
             </LinearLayout>
 
