--- a/bluecollar/src/main/res/layout/item_bluejob.xml
+++ b/bluecollar/src/main/res/layout/item_bluejob.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dip"
+        android:layout_height="80dip"
         android:layout_marginLeft="@dimen/padding_default"
         android:layout_marginRight="@dimen/space_10"
         android:orientation="horizontal"
@@ -18,18 +18,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:background="@color/grey"
             app:touchHeight="100dp"
             >
 
             <CheckBox
                 android:id="@+id/item_c"
-                android:layout_width="25dip"
-                android:layout_height="25dip"
-                android:background="@drawable/checkbox_selector"
+                android:layout_width="20dip"
+                android:layout_height="20dip"
+                android:background="@drawable/checkbox_bg"
                 android:button="@null"
                 android:clickable="false"
-                android:padding="@dimen/space_10"
+                android:padding="@dimen/padding_small"
                 />
         </cn.goodjobs.common.view.ExtendedTouchView>
 
@@ -88,7 +87,7 @@
                     android:singleLine="true"
                     android:text="40000-50000元/月"
                     android:textColor="@color/bule_low_color"
-                    android:textSize="@dimen/text_default"/>
+                    android:textSize="@dimen/text_small"/>
 
                 <LinearLayout
                     android:layout_width="0dip"
