--- a/common/src/main/res/layout/toggle_button.xml
+++ b/common/src/main/res/layout/toggle_button.xml
@@ -10,13 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:background="@drawable/expand_tab_selector"
+        android:button="@android:color/transparent"
         android:gravity="center"
-        android:textSize="@dimen/text_small"
+        android:singleLine="true"
+        android:textColor="@color/black"
         android:textOff="@null"
         android:textOn="@null"
-        android:background="@drawable/expand_tab_selector"
-        android:singleLine="true"
-        android:textColor="@color/black"/>
+        android:textSize="@dimen/text_small"/>
 
     <TextView
         android:layout_width="match_parent"
