--- a/common/src/main/res/layout/view_error_layout.xml
+++ b/common/src/main/res/layout/view_error_layout.xml
@@ -17,9 +17,13 @@
             android:orientation="vertical">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+                android:id="@+id/load_box"
+                android:layout_width="@dimen/loading_dialog_size"
+                android:layout_height="@dimen/loading_dialog_size"
+                android:background="@drawable/loading_dialog_bg"
+                android:minHeight="@dimen/loading_dialog_size"
+                android:minWidth="@dimen/loading_dialog_size">
+
 
                 <ImageView
                     android:id="@+id/img_error_layout"
@@ -28,11 +32,36 @@
                     android:background="@drawable/pagefailed_bg"
                     android:visibility="gone"/>
 
+                <ImageView
+                    android:id="@+id/load_img"
+                    android:layout_width="45dip"
+                    android:layout_height="45dip"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="30dip"
+                    android:layout_marginTop="20dip"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/logo_white"/>
+
                 <ProgressBar
                     android:id="@+id/animProgress"
-                    style="@style/loading"
-                    android:layout_width="30dip"
-                    android:layout_height="30dip"/>
+                    android:layout_width="65dip"
+                    android:layout_height="65dip"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="20dip"
+                    android:layout_marginRight="20dip"
+                    android:layout_marginTop="10dip"
+                    android:indeterminateDrawable="@drawable/loading_animation"/>
+
+                <TextView
+                    android:id="@+id/tipTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dip"
+                    android:layout_below="@id/animProgress"
+                    android:gravity="center"
+                    android:text="数据加载中……"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_small"/>
+
             </RelativeLayout>
 
             <TextView
