--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -19,8 +19,8 @@
         <item name="android:layout_height">30dip</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/font_size_12</item>
+        <item name="android:textColor">@color/light_color</item>
+        <item name="android:textSize">@dimen/text_small</item>
     </style>
 
     <style name="listitem">
