--- a/bluecollar/src/main/res/layout/activity_add_trend.xml
+++ b/bluecollar/src/main/res/layout/activity_add_trend.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical"
         android:background="@color/white">
         <EditText
+            android:id="@+id/etContent"
             android:layout_width="match_parent"
             android:layout_height="120dip"
             android:layout_margin="@dimen/padding_default"
@@ -20,14 +21,13 @@
             android:hint="这一刻的想法..."
             android:textSize="@dimen/text_small"/>
 
-        <LinearLayout
-            android:id="@+id/imageLayout"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        </LinearLayout>
+            android:layout_height="80dip"
+            android:layout_marginLeft="@dimen/padding_default"
+            android:layout_marginRight="@dimen/padding_default"
+            android:layout_marginBottom="@dimen/padding_default"/>
     </LinearLayout>
-
 
 </LinearLayout>
