--- a/bluecollar/src/main/res/layout/fragment_blue_info_center.xml
+++ b/bluecollar/src/main/res/layout/fragment_blue_info_center.xml
@@ -114,8 +114,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:background="@color/topbar_bg"
-                                android:paddingLeft="@dimen/padding_default"
-                                android:paddingRight="@dimen/padding_default"
+                                android:drawableLeft="@mipmap/icon_update"
+                                android:drawablePadding="@dimen/padding_small"
+                                android:paddingLeft="@dimen/padding_small"
+                                android:paddingRight="@dimen/padding_small"
                                 android:text="更新简历"
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/text_default" />
@@ -126,8 +128,10 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/padding_small"
                                 android:background="#21BD9C"
-                                android:paddingLeft="@dimen/padding_default"
-                                android:paddingRight="@dimen/padding_default"
+                                android:drawableLeft="@mipmap/icon_entrust"
+                                android:drawablePadding="@dimen/padding_small"
+                                android:paddingLeft="@dimen/padding_small"
+                                android:paddingRight="@dimen/padding_small"
                                 android:text="委托投递"
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/text_default" />
