--- a/bluecollar/src/main/res/layout/activity_resume_more.xml
+++ b/bluecollar/src/main/res/layout/activity_resume_more.xml
@@ -191,6 +191,7 @@
 
 
             <Button
+                android:id="@+id/btn_save"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height"
                 android:layout_margin="@dimen/padding_default"
